--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
+		"http-errors": "^2.0.0",
 		"mongoose": "^8.8.2",
 		"morgan": "^1.10.0"
 	},
