--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node src/app.js",
-		"dev": "nodemon src/app.js",
+		"dev": "nodemon src/server.js",
 		"clean": "rm -rf node_modules",
 		"db:seed": "node src/db/seed.js",
 		"start:prod": "NODE_ENV=production node src/app.js"
@@ -23,8 +23,10 @@
 	"homepage": "https://github.com/saddamarbaa/node-express-mongodb-developer-match-rest-api#readme",
 	"dependencies": {
 		"dotenv": "^16.4.5",
+		"dotenv-safe": "^9.1.0",
 		"express": "^4.21.1",
 		"http-errors": "^2.0.0",
+		"joi": "^17.13.3",
 		"mongoose": "^8.8.2",
 		"morgan": "^1.10.0"
 	},
