feat: add jwt bearer token authentication

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 MONGODB_CONNECTION_STRING = "MONGODB CONNECTION URL"
 TEST_ENV_MONGODB_CONNECTION_STRING= "MONGODB CONNECTION URL ON TEST ENV"
-NODE_ENV =  "development",
+NODE_ENV =  "development"
+JWT_TOKEN_SECRET = "TOKEN SECRET"
+API_VERSION ="API VERSION"
+JWT_EXPIRE_TIME = "JWT EXPIRE TIME"
+
+
