--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
 	},
 	"homepage": "https://github.com/saddamarbaa/node-express-mongodb-developer-match-rest-api#readme",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.7",
 		"dotenv": "^16.4.5",
 		"dotenv-safe": "^9.1.0",
 		"express": "^4.21.1",
 		"http-errors": "^2.0.0",
 		"joi": "^17.13.3",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.8.2",
 		"morgan": "^1.10.0"
 	},
