--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"express": "^4.21.1",
 		"http-errors": "^2.0.0",
 		"joi": "^17.13.3",
+		"joi-objectid": "^4.0.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.8.2",
 		"morgan": "^1.10.0"
