feat: add reset-password / forget-password api

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ NODE_ENV =  "development"
 JWT_TOKEN_SECRET = "TOKEN SECRET"
 API_VERSION ="API VERSION"
 JWT_EXPIRE_TIME = "JWT EXPIRE TIME"
+CLIENT_URL = "http://localhost:8080"
 
 
