--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"joi-objectid": "^4.0.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.8.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"socket.io": "^4.8.3"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.7"
